--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartPark">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDrZz5kW7SaNRMP1koOTRn1dSJHLGN-Gho" /> <!-- Google maps sdk api -->
+
+
         <activity
             android:name=".Settings"
             android:exported="true"
